k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appcompatcheck
  labels:
    name: appcompatcheck
    app: appcompatcheck
    environment: production
